# Anglish

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  env.example  go.mod  go.sum
cmd/Anglish/: anglish_grammar.txt
cmd/anglish/: main.go
docs/: initial_action_plan.md  meeting-notes-2025-09-17.txt
examples/: chatbot.ang
internal/llm/: agent_factory.go  openai.go  prompt_reader.go
internal/llm/prompts/: func_space_agent_system.md  prompt_templates.go  ui_space_agent_system.md
internal/parse/: anglish_grammar.txt  ast.go  error.go  names.go  parser.go
src/: main.rs
src/agent/: agent.rs  mod.rs  ollama_agent.rs  traits.rs
src/contract_parse/: anglish_grammar.txt  ast.rs  mod.rs  parser.rs  token_stream.rs
src/llm/: agent.rs
tests/: agent_factory_test.go  integration_test.rs  openai_test.go
